<?xml version="1.0"?>
<package format="2">
  <name>costmap_converter</name>
  <version>0.0.0</version>
  <description>The exploration package</description>
  <maintainer email="xuechengxu@zju.edu.cn">xuechengxu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>nav_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>
</package>
