<?xml version="1.0"?>
<package>
  <name>dislam_msgs</name>
  <version>1.0.0</version>
  <description>The dislam_msgs package contains messages.</description>

  <maintainer email="xxx@xxx.xxx">Xuecheng XU</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
