<?xml version="1.0"?>
<package format="2">
  <name>tf2_eigen</name>
  <version>0.7.5</version>
  <description>tf2_eigen</description>
  <author>Koji Terada</author>
  <maintainer email="terakoji@gmail.com">Koji Terada</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>tf2</depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>eigen</build_export_depend>

</package>
