<package format="2">
  <name>tf2_geometry_msgs</name>
  <version>0.7.5</version>
  <description>
    tf2_geometry_msgs
  </description>
  <author>Wim Meeussen</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/tf2_ros</url>
    
  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>liborocos-kdl-dev</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <build_depend>python3-pykdl</build_depend>
 
  <exec_depend>python3-pykdl</exec_depend>

  <test_depend>ros_environment</test_depend>
  <test_depend>rostest</test_depend>
</package>

