<?xml version="1.0"?>
<package>
  <name>kindr_msgs</name>
  <version>0.3.0</version>
  <description>Kindr common msgs</description>
  <maintainer email="pfankhauser@anybotics.com">Peter Fankhauser</maintainer>
  <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>
  <license>BSD</license>
  <url>https://github.com/anybotics/kindr_ros</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
